Increase max content width to prevent event stickers from getting cropped
Also give the group of stickers some padding.

--- a/assets/css/style/event_stickers.css
+++ b/assets/css/style/event_stickers.css
@@ -1,5 +1,6 @@
 #event_stickers {
     overflow: scroll;
+    padding: 8px;
 }
 .hexagon {
     position: relative;
