--- a/assets/css/style/style.css
+++ b/assets/css/style/style.css
@@ -27,7 +27,7 @@
     --footer-vertical-padding: 20px;
 
     --article-max-width: 800px;
-    --content-max-width: 1200px;
+    --content-max-width: 1250px;
 
     --colour-main:          33, 188, 255; /* rgb(33, 188, 255)*/
     --colour-accent:        26, 140, 255;
